--- a/index.html
+++ b/index.html
@@ -1,9 +1,18 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-  <head>
-    <title>Title</title>
-  </head>
-  <body>
-    <p>Paragraph</p>
-  </body>
-</html>
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="description" content="Medicine Dosage Calculator, in Javascript" />
+  <meta name="keywords" content="mths, icd2o" />
+  <meta name="author" content="Kyle Matthew" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="./css/style.css" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+  <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css" />
+  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon-16x16.png" />
+  <link rel="manifest" href="site.webmanifest" />
+  <title>Medicine Dosage Calculator, in Javascript</title>
+</head>
